(Format: Year/Month/Day)
Changes for 0.9.5:
*03/07/20:
   * Fix menu [re]drawing, particularly when selecting options (Simon)
     Menu.hh/cc
   * Fix disappearing Remember menu, plus titles of sub-window menus
     -> can now use addExtraMenus for windows in extensions (Simon)
     Menu.hh/cc Window.hh/cc Screen.hh/cc Remember.cc
   * Fix crash with toolbarmode = OFF, and put toolbar menu back into
     screen's configure menu (Simon)
     Screen.hh/cc ToolbarHandler.cc
*03/07/19:
   * Make most Commands execute on mouse screen rather than screen 
     of focused window (Simon)
     FbCommands.cc WorkspaceCmd.cc
   * Fix xinerama options (again) for Slit and Toolbar (Simon)
     Xinerama.hh Slit.hh/cc Toolbar.hh/cc
   * Move menu alpha setting into MenuTheme (Simon)
     - fixes alpha init on multi-screened machines
     MenuTheme.hh/cc Menu.hh/cc Screen.cc
   * Add compiled-in defaults to fluxbox -info (thanks Matt Hope)
     main.cc
   * Redo ResourceManager so that it loads resources on registration, and
     only opens the database in blocks of requests    (Simon)
     - fixes initial loading of init resources (e.g. toolbar.layer)
     Resource.hh/cc XrmDatabaseHelper.hh Screen.cc fluxbox.hh/cc Slit.cc
     Toolbar.cc ToolbarHandler.cc
*03/07/18:
   * Fix java bug. Wasn't sending ConfigureNotify's to client (Simon)
     - also fix missing border on transient windows
     - also set some gnome hints initially
     Window.hh/cc Gnome.cc
*03/07/12:
   * Fixed 8 bpp crash (Henrik)
     ImageControl.cc 
*03/07/11:
   * Added TOOLBAR to -info (Henrik)
     main.cc
-------------------------------------------------------------------------
Changes for 0.9.4:
*03/07/10:
   * Added new toolbar theme item (Henrik)
     * toolbar.button.borderWidth: <integer>
   * Add [startup] to Remember (Simon)
       Can now add entries to apps file like:
         [startup] {xterm}
       Then "xterm" will be launched on fluxbox startup. 
       Can also give a screen option: